# action-monitoring-template

./: .env.sample  .gitignore  go.mod  go.sum  main.go  tree.txt
action-runner/: Dockerfile  start.sh
modelling/: .gitignore  go.mod  main.go  pyproject.toml  test.py  training.logs
modelling/src/modelling/: __init__.py  all_steps.csv  analysis.py  main.ipynb  main.py  optimizer.py  training.logs  utils.py  workflow_data.csv  workflow_models_prophet.json  workflow_models_rf.joblib  workflow_models_rnn.h5  workflow_models_rnn.keras
modelling/src/modelling/from_my_data/: advanced_workflow_analysis_report.html  workflow_data.csv  workflow_models_regression.joblib  workflow_models_rf.joblib  workflow_models_rnn.keras
monitoring/github_api_service/: all_steps.csv  go.mod  go.sum  readSteps.go  workflow_exporter.go  workflow_exporter_test.go
monitoring/github_api_service/runLogs/runner-2-jobRun-10431209862/: -2147483648_build.txt  0_build (golang).txt  1_build (python).txt  2_build (java).txt
monitoring/github_api_service/runLogs/runner-2-jobRun-10431209862/build (golang)/: 12_Upload Go test results.txt  1_Set up job.txt  27_Post Set up Golang.txt  28_Post Checkout code.txt  29_Complete job.txt  2_Checkout code.txt  3_Set up Golang.txt  6_Install dependencies and run tests for Golang.txt
monitoring/log_exporter/: Dockerfile  README.md  go.mod  log_exporter.go
monitoring/log_exporter/test/: runner.sh
monitoring/prometheus_collector/: prometheus_collector.go
runner-files/home/: collect_log_paths.sh  docker-compose.yml  prometheus.yml
(+20 files in other folders)
